VeraSandBox2016/src/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Costs_EUR__c</fullName>
        <label>Actual Costs EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_EUR__c</fullName>
        <label>Budget EUR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CVIC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CVIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>De_Impact_Lessons_Learned__c</fullName>
        <label>De. Impact - Lessons Learned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dep_Impact_Training_Helped__c</fullName>
        <label>Dep. Impact - Training Helped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expertise_Added__c</fullName>
        <label>Expertise Added</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FIAR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FOR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FOR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISIL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRRID__c</fullName>
        <displayFormat>TRA-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MENA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MENA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nbr_Experts_Deployed_from_this_Training__c</fullName>
        <label>Nbr. Experts Deployed from this Training</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nbrs_Part_Certified__c</fullName>
        <label>Nbrs. Part. Certified</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nbrs_Part_Trained__c</fullName>
        <label>Nbrs. Part. Trained</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Focus__c</fullName>
        <label>Primary Focus</label>
        <picklist>
            <picklistValues>
                <fullName>GINV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGBV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SGBV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SGBV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>PLAN: planned
CFN: Call for Nomination
OPEN: Selection + training
COMP: Completed
CAN: Cancelled</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>PLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <label>Venue Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2011_Syria_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2011 Syria Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Iraq_Conflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 Iraq Conflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X6m_Feedback_Lessons_Learned__c</fullName>
        <label>6m Feedback - Lessons Learned</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X6m_Feedback_Training_Helped__c</fullName>
        <label>6m Feedback - Training Helped</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All_Trainings</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Primary_Focus__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Trainings</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>